<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Administrativo">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_lancamentos"
                    android:icon="@drawable/ic_menu_lancamentos"
                    android:title="@string/menu_lancamentos" />
            </menu>
        </item>
        <!--item android:title="Círculos">
            <menu>
                <item
                    android:id="@+id/nav_gerenciar_circulo"
                    android:icon="@drawable/ic_menu_gerenciar_circulo"
                    android:title="@string/menu_gerenciar_circulo" />
                <item
                    android:id="@+id/nav_entrar_circulo"
                    android:icon="@drawable/ic_menu_entrar_circulo"
                    android:title="@string/menu_entrar_circulo" />
            </menu>
        </item-->
        <item android:title="Aplicação">
            <menu>
                <!--item
                    android:id="@+id/nav_configuracoes"
                    android:icon="@drawable/ic_menu_configuracoes"
                    android:title="@string/menu_configuracoes" /-->
                <item
                    android:id="@+id/nav_sobre"
                    android:icon="@drawable/ic_menu_sobre"
                    android:title="@string/menu_sobre" />
            </menu>
        </item>
    </group>
</menu>
